--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mqtt": "^4.3.7",
+    "socket.io": "^4.5.2",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "ws": "^8.8.1"
   }
 }
