--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "mqtt": "^4.3.7",
     "socket.io": "^4.5.2",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0",
-    "ws": "^8.8.1"
+    "swagger-ui-express": "^4.5.0"
   }
 }
