--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "loadavg-windows": "^1.1.1",
     "mqtt": "^4.3.7",
+    "node-os-utils": "^1.3.7",
     "socket.io": "^4.5.2",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
