--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node connect.js"
   },
   "repository": {
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/IIOT-Test-Bench/broker-mqtt#readme",
   "dependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "loadavg-windows": "^1.1.1",
+    "mocha": "^10.0.0",
     "mqtt": "^4.3.7",
     "node-os-utils": "^1.3.7",
     "socket.io": "^4.5.2",
